--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
             <div>
                 <ul>
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="experience">EXPERIENCE</a></li>
-                    <li><a href="education">EDUCATION</a></li>
+                    <li><a href="#experience">EXPERIENCE</a></li>
+                    <li><a href="#education">EDUCATION</a></li>
                     <li><a href="skill">SKILL</a></li>
                     <li><a href="contact">CONTACT</a></li>
                 </ul>
@@ -85,7 +85,7 @@
         </div>
     </section>
 
-    <section class="experience">
+    <section class="experience" id="experience">
         <h3 class="experience-title">EXPERIENCE</h3>
 
         <div class="experience-container">
