--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="#experience">EXPERIENCE</a></li>
                     <li><a href="#education">EDUCATION</a></li>
-                    <li><a href="skill">SKILL</a></li>
-                    <li><a href="contact">CONTACT</a></li>
+                    <li><a href="#skill">SKILL</a></li>
+                    <li><a href="#contact">CONTACT</a></li>
                 </ul>
             </div>
 
@@ -132,6 +132,10 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <section  class="education" id="education">
+
     </section>
 
 </body>
