--- a/index.html
+++ b/index.html
@@ -143,6 +143,12 @@
 
         <div class="education-container">
             <div class="education-items">
+                <div>
+                    <span class="hover-card" style="font-size: 2em; color: lightgrey;">
+                        <i class="fab fa-js-square"></i>
+                    </span>
+                </div>
+
                 <div class="education-date">
                     <h5><b>December 2020 till date</b></h5>
                 </div>
@@ -155,8 +161,15 @@
             </div>
 
             <div class="education-items">
+                <div>
+                    <span class="hover-card" style="font-size: 2em; color: lightgrey;">
+                        <i class="fab fa-html5"></i>
+                        <i class="fab fa-css3-alt"></i>
+                    </span>
+                </div>
+
                 <div class="education-date">
-                    <h5><b>June 2020 - December 2020</b></h5>
+                    <h5><b>December 2020</b></h5>
                 </div>
 
                 <div class="education-details">
@@ -167,8 +180,15 @@
             </div>
 
             <div class="education-items">
+                <div>
+                    <span class="hover-card" style="font-size: 2em; color: lightgrey;">
+                        <i class="fab fa-html5"></i>
+                        <i class="fab fa-css3-alt"></i>
+                    </span>
+                </div>
+                
                 <div class="education-date">
-                    <h5><b>February 2020 - June 2020</b></h5>
+                    <h5><b>June 2020</b></h5>
                 </div>
 
                 <div class="education-details">
@@ -178,12 +198,15 @@
             </div>
 
             <div class="education-items">
+                <div>
+                    <i class="material-icons">memory</i>
+                </div>
                 <div class="education-date">
                     <h5><b>December 2018</b></h5>
                 </div>
 
                 <div class="education-details">
-                    <h4>IT Academy, Cape Town, South Africa</h4>
+                    <h4>IT Academy</h4>
                     <h5>CompTIA A+ 2015 Essentials 220-902</h5>
                     <p>Course Mastery Certificate</p>
                 </div>
