--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         <div class="education-container">
             <div class="education-items">
                 <div>
-                    <span class="hover-card" style="font-size: 2em; color: lightgrey;">
+                    <span class="hover-card">
                         <i class="fab fa-js-square"></i>
                     </span>
                 </div>
@@ -162,7 +162,7 @@
 
             <div class="education-items">
                 <div>
-                    <span class="hover-card" style="font-size: 2em; color: lightgrey;">
+                    <span class="hover-card">
                         <i class="fab fa-html5"></i>
                         <i class="fab fa-css3-alt"></i>
                     </span>
@@ -181,7 +181,7 @@
 
             <div class="education-items">
                 <div>
-                    <span class="hover-card" style="font-size: 2em; color: lightgrey;">
+                    <span class="hover-card">
                         <i class="fab fa-html5"></i>
                         <i class="fab fa-css3-alt"></i>
                     </span>
