Skills section added

--- a/index.html
+++ b/index.html
@@ -214,7 +214,27 @@
         </div>
     </section>
 
+    <section class="skill" id="skill">
+        <div>
+            <div>
+                <img src="C:\Users\Raymond\Documents\Code\Zuri Internship\CV Task\vippng.com-developer-png-1091107.png" alt="working on pc">
+            </div>
 
+            <div>
+                <ul>
+                    <li>HTML, CSS and JavaScript</li>
+                    <li>Graphics design </li>
+                    <li>Adobe Photoshop and Adobe Lightroom</li>
+                    <li>Written and verbal communication</li>
+                    <li>Problem solving </li>
+                    <li>Critical Thinking </li>
+                    <li>Creativity</li>
+                    <li>High level of organization</li>
+                    <li>Microsoft Office Suite</li>
+                </ul>
+            </div>
+        </div>
+    </section>
 
 </body>
 
