More styling on the skills section

--- a/index.html
+++ b/index.html
@@ -217,26 +217,25 @@
     <section class="skill" id="skill">
         <div class="skill-container">
             <div>
-                <h3 class="skill-title">SKILL</h3>
+                <h3 class="skill-title">SKILLS</h3>
             </div>
             
             <div class="skill-content">
                 <div class="skills-img">
-                    <img src="C:\Users\Raymond\Documents\Code\Zuri Internship\CV Task\vippng.com-developer-png-1091107.png"
-                        alt="working on pc">
+                    <img src="C:\Users\Raymond\Documents\Code\Zuri Internship\CV Task\vippng.com-developer-png-1091107.png" alt="working on pc">
                 </div>
         
-                <div>
+                <div class="skills-items">
                     <ul>
-                        <li>HTML, CSS and JavaScript</li>
-                        <li>Graphics design </li>
-                        <li>Adobe Photoshop and Adobe Lightroom</li>
-                        <li>Written and verbal communication</li>
-                        <li>Problem solving </li>
-                        <li>Critical Thinking </li>
-                        <li>Creativity</li>
-                        <li>High level of organization</li>
-                        <li>Microsoft Office Suite</li>
+                        <li style="margin-left: -8rem;">HTML, CSS and JavaScript</li>
+                        <li style="margin-left: -6rem;">Graphics design </li>
+                        <li style="margin-left: -4rem;">Adobe Photoshop and Adobe Lightroom</li>
+                        <li style="margin-left: -2rem;">Written and verbal communication</li>
+                        <li style="margin-left: 0rem;">Problem solving </li>
+                        <li style="margin-left: -2rem;">Critical Thinking </li>
+                        <li style="margin-left: -4rem;">Creativity</li>
+                        <li style="margin-left: -6rem;">High level of organization</li>
+                        <li style="margin-left: -8rem;">Microsoft Office Suite</li>
                     </ul>
                 </div>
             </div>
