Back to Top button

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="#experience">EXPERIENCE</a></li>
                     <li><a href="#education">EDUCATION</a></li>
-                    <li><a href="#skill">SKILL</a></li>
+                    <li><a href="#skill">SKILLS</a></li>
                     <li><a href="#contact">CONTACT</a></li>
                 </ul>
             </div>
 
         </nav>
     </header>
-    <section class="main-bg">
+    <section id="main-bg" class="main-bg">
         <div>
             <main>
                 <div class="profile-container">
@@ -242,6 +242,24 @@
         </div>
 
     </section>
+
+    <div>
+        <a href="#main-bg">
+            <button class="to-top-btn">
+                <span style="font-size: 3rem; font-weight: 500; height: 2rem;" class="material-icons">
+                    expand_less
+                </span>
+        
+                <p>Top</p>
+            </button>
+        </a>
+    </div>
+
+    <footer>
+        <div>
+            
+        </div>
+    </footer>
 
 </body>
 
