--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Ayomide Solarin">
     <title>I am Ayomide</title>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="/main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="https://kit.fontawesome.com/377b386cf4.js" crossorigin="anonymous"></script>
 </head>
@@ -18,15 +19,13 @@
                 <img src="https://res.cloudinary.com/solarrays/image/upload/v1619894116/Portfolio%20Website/AR_Solarin_Logo_dw9iag.png"
                     alt="Site logo" class="logo">
             </a>
-            <div>
-                <ul>
-                    <li><a href="index.html">HOME</a></li>
-                    <li><a href="#experience">EXPERIENCE</a></li>
-                    <li><a href="#education">EDUCATION</a></li>
-                    <li><a href="#skill">SKILLS</a></li>
-                    <li><a href="#contact">CONTACT</a></li>
-                </ul>
-            </div>
+            <ul class="nav-links" id="links">
+                <li><a href="index.html">HOME</a></li>
+                <li><a href="#experience">EXPERIENCE</a></li>
+                <li><a href="#education">EDUCATION</a></li>
+                <li><a href="#skill">SKILLS</a></li>
+                <li><a href="#contact">CONTACT</a></li>
+            </ul>
 
         </nav>
     </header>
@@ -261,7 +260,8 @@
             <div class="about">
                 <h3>About Me</h3>
                 <p>
-                    I am a passionate individual looking for opportunities to contribute to the success of an institution that provides
+                    I am a passionate individual looking for opportunities to contribute to the success of an
+                    institution that provides
                     opportunities for creativity. To learn from the experience and contribute my knowledge as best as I
                     can.
                 </p>
@@ -273,7 +273,7 @@
                 <form>
                     <input type="text" name="fname" id="fname" placeholder="Johnson Taylor" class="name"> <br>
 
-                    <input type="email" name="email" id="email" placeholder="your@email.com" class="email"> <br> 
+                    <input type="email" name="email" id="email" placeholder="your@email.com" class="email"> <br>
 
                     <textarea name="comment" id="comment" class="comment" placeholder="Your message"></textarea> <br>
 
@@ -290,11 +290,11 @@
                     <a href="https://twitter.com/AyomideSolarin">
                         <i class="fab fa-twitter"></i>
                     </a>
-    
+
                     <a href="https://www.linkedin.com/in/ayomide-raymond-38a58319b/">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
-    
+
                     <a href="https://www.instagram.com/solarinayo">
                         <i class="fab fa-instagram"></i>
                     </a>
@@ -302,6 +302,16 @@
             </div>
         </div>
     </footer>
+    <script>
+        function myFunction() {
+            var x = document.getElementById("links");
+            if (x.style.display === "block") {
+                x.style.display = "none";
+            } else {
+                x.style.display = "block";
+            }
+        }
+    </script>
 
 </body>
 
