Responsiveness for experience section

--- a/index.html
+++ b/index.html
@@ -24,11 +24,9 @@
                 <li><a href="#experience">EXPERIENCE</a></li>
                 <li><a href="#education">EDUCATION</a></li>
                 <li><a href="#skill">SKILLS</a></li>
+                <li><a href="portfolio.html">PORTFOLIO</a></li>
                 <li><a href="#contact">CONTACT</a></li>
             </ul>
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                <i class="fa fa-bars" style="font-size: 1.5rem; font-weight: 500;"></i>
-            </a>
 
         </nav>
     </header>
@@ -126,7 +124,7 @@
                     </div>
                 </div>
 
-                <div class="experience-items">
+                <div class="experience-items" id="last-exp-item">
                     <div class="experience-date">
                         <h5><b>February 2018 - June 2019</b></h5>
                     </div>
@@ -215,7 +213,7 @@
             </div>
         </div>
     </section>
-
+<!--
     <section class="skill" id="skill">
         <div class="skill-container">
             <div>
@@ -257,7 +255,7 @@
             </button>
         </a>
     </div>
-
+-->
     <footer class="footer" id="contact">
         <div class="contact-container">
             <div class="about">
