--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                 </a>
                             </li>
                             <li>
-                                <a href="wa.me/2349019071971">
+                                <a href="https://wa.me/2349019071971">
                                     <span class="hover" style="font-size: 2em; color: lightgrey;">
                                         <i class="fab fa-whatsapp-square"></i>
                                     </span>
