--- a/index.html
+++ b/index.html
@@ -228,15 +228,15 @@
 
                 <div class="skills-items">
                     <ul>
-                        <li style="margin-left: -9rem;">HTML, CSS and JavaScript</li>
-                        <li style="margin-left: -7rem;">Graphics design </li>
-                        <li style="margin-left: -5rem;">Adobe Photoshop and Adobe Lightroom</li>
-                        <li style="margin-left: -3rem;">Written and verbal communication</li>
-                        <li style="margin-left: -1rem;">Problem solving </li>
-                        <li style="margin-left: -3rem;">Critical Thinking </li>
-                        <li style="margin-left: -5rem;">Creativity</li>
-                        <li style="margin-left: -7rem;">High level of organization</li>
-                        <li style="margin-left: -9rem;">Microsoft Office Suite</li>
+                        <li id="skill-html">HTML, CSS and JavaScript</li>
+                        <li id="skill-graphics">Graphics design </li>
+                        <li id="skill-adobe">Adobe Photoshop and Adobe Lightroom</li>
+                        <li id="skill-comm">Written and verbal communication</li>
+                        <li id="skill-prob">Problem solving </li>
+                        <li id="skill-think">Critical Thinking </li>
+                        <li id="skill-create">Creativity</li>
+                        <li id="skill-org">High level of organization</li>
+                        <li id="skill-office">Microsoft Office Suite</li>
                     </ul>
                 </div>
             </div>
