--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     alt="Site logo" class="logo">
             </a> 
 
-            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+            <a href="javascript:void(0);" class="icon" onclick="hamburger()">
                 <i class="fa fa-bars"></i>
             </a>
 
@@ -40,7 +40,7 @@
             <main>
                 <div class="profile-container">
                     <div style="flex: 1 1;">
-                        <img src="https://res.cloudinary.com/solarrays/image/upload/v1619894114/Portfolio%20Website/Me_-13_cropped_nxqrga.jpg"
+                        <img src="https://res.cloudinary.com/solarrays/image/upload/v1623682717/Portfolio%20Website/Me_Headshot_eyzkql.jpg"
                             alt="Ayomide" class="profile-img">
                     </div>
                     <div style="flex: 1 1;" class="profile">
@@ -249,7 +249,7 @@
 
     </section>
 
-    <div>
+    <div class="back-to-top">
         <a href="#main-bg">
             <button class="to-top-btn">
                 <span style="font-size: 3rem; font-weight: 500; height: 2rem;" class="material-icons">
@@ -310,7 +310,7 @@
     </footer>
 
     <script>
-        function myFunction() {
+        function hamburger() {
             var x = document.getElementById("links");
             if (x.style.display === "block") {
                 x.style.display = "none";
