--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <main>
                 <div class="profile-container">
                     <div style="flex: 1 1;">
-                        <img src="https://res.cloudinary.com/solarrays/image/upload/v1623682717/Portfolio%20Website/Me_Headshot_eyzkql.jpg"
+                        <img src="https://res.cloudinary.com/solarrays/image/upload/c_scale,w_1440/v1623682717/Portfolio%20Website/Me_Headshot_eyzkql.jpg"
                             alt="Ayomide" class="profile-img">
                     </div>
                     <div style="flex: 1 1;" class="profile">
