--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </a>
 
             <div class="nav-links" id="links">
-                    <a href="index.html">HOME</a>
+                    <a href="#main-bg">HOME</a>
                     <a href="#experience">EXPERIENCE</a>
                     <a href="#education">EDUCATION</a>
                     <a href="#skill">SKILLS</a>
