--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
     </head>
 <body style="text-align: center; ">
     <img src="https://res.cloudinary.com/solarrays/image/upload/v1656980480/Portfolio%20Website/site_maintenance_nbzptr.png" alt="Website under maintenance" style="width: 55%; height: auto; margin: 5% auto 5%;">
-    <div style="width: 70%; max-width: 1024px; margin: auto;">
+    <div style="width: 70%; max-width: 1024px; margin: auto auto 3rem;">
         
     <h3>Oops! This website was gathering some dust so we got to doing some spring cleaning. Come back soon, yeah?</h3>
     <p style="width: 70%; margin: auto;">Signed: Management. <span style="font-size: .7rem;">(Psst! There is no management, it's just me. Shhhh! )</span></p>
 
     </div>
+
+    <a href="index_1.html" style="padding-bottom: 3rem; text-decoration: none;">Visit legacy page</a>
 
     <!-- Bootstrap script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
