--- a/index_1.html
+++ b/index_1.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <script src="https://kit.fontawesome.com/377b386cf4.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/7aa294179d.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
