--- a/index_1.html
+++ b/index_1.html
@@ -19,21 +19,21 @@
             <a href="index.html">
                 <img src="https://res.cloudinary.com/solarrays/image/upload/v1619894116/Portfolio%20Website/AR_Solarin_Logo_dw9iag.png"
                     alt="Site logo" class="logo">
-            </a> 
+            </a>
 
             <a href="javascript:void(0);" class="icon" onclick="hamburger()">
                 <i class="fa fa-bars"></i>
             </a>
 
             <div class="nav-links" id="links">
-                    <a href="#main-bg">HOME</a>
-                    <a href="#experience">EXPERIENCE</a>
-                    <a href="#education">EDUCATION</a>
-                    <a href="#skill">SKILLS</a>
-                    <a href="portfolio.html">PORTFOLIO</a>
-                    <a href="#contact">CONTACT</a>
+                <a href="#main-bg">HOME</a>
+                <a href="#experience">EXPERIENCE</a>
+                <a href="#education">EDUCATION</a>
+                <a href="#skill">SKILLS</a>
+                <a href="portfolio.html">PORTFOLIO</a>
+                <a href="#contact">CONTACT</a>
             </div>
-            
+
         </nav>
     </header>
     <section id="main-bg" class="main-bg">
@@ -47,7 +47,7 @@
                     <div style="flex: 1 1;" class="profile">
                         <h6 class="line-one">Hey there, I am </h6>
                         <h3 class="profile-name">SOLARIN AYOMIDE</h3>
-                        <h4 class="role"><b>Photographer, Web Developer</b></h4>
+                        <h4 class="role"><b>Frontend Developer</b></h4>
                         <p class="profile-text">
                             A passionate individual looking to contribute to the success of an institution
                             that provides opportunities for creativity. To learn from the experience and
@@ -95,11 +95,130 @@
         </div>
     </section>
 
+    <!-- Experience Section -->
     <section class="experience" id="experience">
         <h3 class="experience-title">EXPERIENCE</h3>
 
         <div class="experience-container">
-            <div>
+            <div class="experience-item">
+                <div class="experience-header">
+                    <div></div>
+                    <div class="comp-name">
+                        <h4>The Knowledge Trust</h4>
+                    </div>
+                </div>
+                <div class="experience-details">
+                    <div class="experience-date">
+                        <h5><b>Oct 2021 - June 2022</b></h5>
+                    </div>
+                    <div class="experience-role">
+                        <h5>Junior Frontend Developer</h5>
+                        <p><b>-</b> Built Nano courses, Expo stands and Job interview flows into a WhatsApp bot that was
+                            accessed by tens of thousands of users</p>
+                        <p><b>-</b> Optimized existing website, achieving a significant increase in performance in 3
+                            months</p>
+                        <p><b>-</b> Curated, presented, and documented learning materials to improve the skills of the
+                            members of the tech team</p>
+                    </div>
+                </div>
+
+                <div class="experience-details">
+                    <div class="experience-date">
+                        <h5><b>June 2021 - Sept 2021</b></h5>
+                    </div>
+                    <div class="experience-role">
+                        <h5>Graduate Intern</h5>
+                        <p><b>-</b> Contributed to the building of Expo stands for the first Expo held entirely on
+                            WhatsApp</p>
+                        <p><b>-</b> Helped hundreds of users to resolve for their queries via email</p>
+                        <p><b>-</b> Monitored website performance and gathered insights that proved essential for
+                            website optimization</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="experience-item">
+                <div class="experience-header">
+                    <div></div>
+                    <div class="comp-name">
+                        <h4>Soft Work Photography</h4>
+                    </div>
+                </div>
+                <div class="experience-details">
+                    <div class="experience-date">
+                        <h5><b>June 2019 - June 2022</b></h5>
+                    </div>
+                    <div class="experience-role">
+                        <h5>Professional Photographer</h5>
+                        <p><b>-</b> Coordinated over 20 photoshoots from beginning to end, including lights management,
+                            posing, shooting, editing, and client management</p>
+                        <p><b>-</b> Managed social media presence of the brand</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="experience-item">
+                <div class="experience-header">
+                    <div></div>
+                    <div class="comp-name">
+                        <h4>Future Africa Consulting and Training</h4>
+                    </div>
+                </div>
+                <div class="experience-details">
+                    <div class="experience-date">
+                        <h5><b>Jan 2018 - June 2019</b></h5>
+                    </div>
+                    <div class="experience-role">
+                        <h5>Telecommunications Engineer</h5>
+                        <p><b>-</b> Commissioned more than 50 sites according to specifications</p>
+                        <p><b>-</b> Conducted PIM tests on over 5 Cell C sites and optimised below-par sites</p>
+                        <p><b>-</b> Trained 3 Field managers in site commissioning and best practices</p>
+                        <p><b>-</b> Coordinated the building, and maintenance of cell sites according to specifications
+                            while observing industry-standard health and safety guidelines</p>
+                        <p><b>-</b> Performed Quality Assurance checks for well over 15 sites</p>
+                        <p><b>-</b> Received hands-on training on Huawei, Nokia, and Ericsson equipment</p>
+                    </div>
+                </div>
+
+                <div class="experience-details">
+                    <div class="experience-date">
+                        <h5><b>July 2017 - Dec 2017</b></h5>
+                    </div>
+                    <div class="experience-role">
+                        <h5>Learner</h5>
+                        <p><b>-</b> Assisted in commissioning over 30 cell sites</p>
+                        <p><b>-</b> Performed site surveys on over 15 sites and documented the results</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 
+                <div class="experience-items">
+                    <div class="experience-date">
+                        <h5><b>Oct 2021 - June 2022</b></h5>
+                    </div>
+
+                    <div class="experience-details">
+                        <h5>Junior Frontend Developer</h5>
+                        <p>Built Nano courses, Expo stands and Job interview flows into a WhatsApp bot that was accessed by tens of thousands of users</p>
+                        <p>Optimized existing website, achieving a significant increase in performance in 3 months</p>
+                        <p>Curated, presented, and documented learning materials to improve the skills of the members of the tech team</p>
+                    </div>
+                </div>
+
+                <div class="experience-items">
+                    <div class="experience-date">
+                        <h5><b>June 2021 - Sept 2021</b></h5>
+                    </div>
+
+                    <div class="experience-details">
+                        <h5>Graduate Intern</h5>
+                        <p>Contributed to the building of Expo stands for the first Expo held entirely on WhatsApp</p>
+                        <p>Helped hundreds of users to resolve for their queries via email </p>
+                        <p>Monitored website performance and gathered insights that proved essential for website  optimization </p>
+                    </div>
+                </div>
+
                 <div class="experience-items">
                     <div class="experience-date">
                         <h5><b>June 2019 till date</b></h5>
@@ -128,8 +247,8 @@
                         <p>Provides first aid if and when necessary</p>
                         <p>Troubleshoots and implements networking technologies</p>
                     </div>
-                </div>
-
+                </div> -->
+            <!-- 
                 <div class="experience-items" id="last-exp-item">
                     <div class="experience-date">
                         <h5><b>February 2018 - June 2019</b></h5>
@@ -139,11 +258,11 @@
                         <h4>Freelancer</h4>
                         <h5>Photographer, Photo Editor, Graphic Designer</h5>
                     </div>
-                </div>
-            </div>
+                </div> -->
         </div>
     </section>
 
+    <!-- Education section -->
     <section class="education" id="education">
         <h3 class="education-title">EDUCATION</h3>
 
@@ -156,13 +275,13 @@
                 </div>
 
                 <div class="education-date">
-                    <h5><b>December 2020 till date</b></h5>
+                    <h5><b>June 2022 - July 2023 (in view)</b></h5>
                 </div>
 
                 <div class="education-details">
-                    <h4>LinkedIn Learning</h4>
-                    <h5>JavaScript Essential Training</h5>
-                    <p>Learning Certificate (in view)</p>
+                    <h4>ALX Africa</h4>
+                    <h5>Software Engineering</h5>
+                    <p>Certificate</p>
                 </div>
             </div>
 
@@ -171,17 +290,18 @@
                     <span class="hover-card">
                         <i class="fab fa-html5"></i>
                         <i class="fab fa-css3-alt"></i>
+                        <i class="fab fa-js-square"></i>
                     </span>
                 </div>
 
                 <div class="education-date">
-                    <h5><b>December 2020</b></h5>
+                    <h5><b>Jan- Oct 2022 (in view)</b></h5>
                 </div>
 
                 <div class="education-details">
-                    <h4>pirple.com</h4>
-                    <h5>Frontend Fundamentals</h5>
-                    <p>Certificate of Completion</p>
+                    <h4>Udemy</h4>
+                    <h5>Fullstack Web Development</h5>
+                    <p>Certificate</p>
                 </div>
             </div>
 
@@ -190,16 +310,18 @@
                     <span class="hover-card">
                         <i class="fab fa-html5"></i>
                         <i class="fab fa-css3-alt"></i>
+                        <i class="fab fa-js-square"></i>
                     </span>
                 </div>
 
                 <div class="education-date">
-                    <h5><b>June 2020</b></h5>
+                    <h5><b>Mar - Aug 2021</b></h5>
                 </div>
 
                 <div class="education-details">
-                    <h4>Freecodecamp.org</h4>
-                    <h5>Responsive Web Design Certification</h5>
+                    <h4>Zuri Internship</h4>
+                    <h5>Frontend Web Development</h5>
+                    <p>Certificate</p>
                 </div>
             </div>
 
@@ -217,9 +339,25 @@
                     <p>Course Mastery Certificate</p>
                 </div>
             </div>
+
+            <div class="education-items">
+                <div>
+                    <i class="material-icons">school</i>
+                </div>
+                <div class="education-date">
+                    <h5><b>Jan - June 2017</b></h5>
+                </div>
+
+                <div class="education-details">
+                    <h4>UNISA</h4>
+                    <h5>International Relations</h5>
+                    <p>BSc.(Unfinished)</p>
+                </div>
+            </div>
         </div>
     </section>
 
+    <!-- Skills Section -->
     <section class="skill" id="skill">
         <div class="skill-container">
             <div>
@@ -235,11 +373,11 @@
                 <div class="skills-items">
                     <ul>
                         <li id="skill-html">HTML, CSS and JavaScript</li>
-                        <li id="skill-graphics">Graphics design </li>
-                        <li id="skill-adobe">Adobe Photoshop and Lightroom</li>
+                        <li id="skill-graphics">Bootstrap and VueJS</li>
+                        <li id="skill-adobe">Graphics design</li>
                         <li id="skill-comm">Written and verbal communication</li>
-                        <li id="skill-prob">Problem solving </li>
-                        <li id="skill-think">Critical Thinking </li>
+                        <li id="skill-prob">Problem solving</li>
+                        <li id="skill-think">Critical Thinking</li>
                         <li id="skill-create">Creativity</li>
                         <li id="skill-org">High level of organization</li>
                         <li id="skill-office">Microsoft Office Suite</li>
